# Project-Ferriosynth

./: Cargo.toml  README.md
.github/workflows/: rust.yml
engine/: Cargo.toml
engine/src/: controls.rs  lib.rs  player.rs  world.rs
engine/src/game_entities/: player.rs
engine/src/game_entities/player/: mod.rs  render.rs
entities/: Cargo.toml
entities/src/: lib.rs  render.rs  renderable.rs  stats.rs
entities/src/controls/: bindings.rs  input.rs  mod.rs
game/: Cargo.toml  settings.toml
game/src/: app.rs  main.rs  settings.rs
game_ai/: Cargo.toml
render/: Cargo.toml
render/src/: lib.rs  window.rs
render/src/draw/: mod.rs
render/src/renderer/: core.rs  mod.rs
render/src/window/: events.rs  manager.rs  mod.rs
src/: lib.rs  main.rs
src/module_lib/: hello_world.rs  mod.rs
